k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: python-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: python-app

  template:
    metadata:
      labels:
        app: python-app

    spec:
      containers:
        - name: python-app
          image: devops-demo:v1
          ports:
            - containerPort: 8080
