k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: python-app

  ports:
    - port: 80
      targetPort: 8080

  type: NodePort
